--- a/Cours_5B7_TP1/src/Locale/FR_CA/fr_CA.po
+++ b/Cours_5B7_TP1/src/Locale/FR_CA/fr_CA.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2019-10-10 20:03+0000\n"
-"PO-Revision-Date: 2019-10-10 16:26-0400\n"
+"PO-Revision-Date: 2019-10-14 16:51-0400\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -71,7 +71,7 @@ msgstr "L'évaluation n'a pas pu être sauvegardée. S'll vous plaît, réessaye
 
 #: /Controller/EvaluationsController.php:101
 msgid "The evaluation has been deleted."
-msgstr ""
+msgstr "L'évaluation a été supprimée."
 
 #: /Controller/EvaluationsController.php:103
 msgid "The evaluation could not be deleted. Please, try again."
