--- a/Cours_5B7_TP1/src/Locale/fr_CA/default.po
+++ b/Cours_5B7_TP1/src/Locale/fr_CA/default.po
@@ -1,2 +1,14 @@
 msgid "msg"
-msgstr "TEST FR"
+msgstr "Exemple CakePHP internationalisation."
+
+msgid "lang"
+msgstr "Langue"
+
+msgid "langchg"
+msgstr "Changer le langage"
+
+msgid "msgAfficherPaiements"
+msgstr "Mes Paiements"
+
+msgid "msgAcheter"
+msgstr "Acheter"
