--- a/Cours_5B7_TP1/src/Locale/en_US/default.po
+++ b/Cours_5B7_TP1/src/Locale/en_US/default.po
@@ -12,3 +12,12 @@ msgstr "My Orders"
 
 msgid "msgAcheter"
 msgstr "Buy"
+
+msgid "traductionAnglais"
+msgstr "English"
+
+msgid "traductionFrancais"
+msgstr "French"
+
+msgid "traductionJaponais"
+msgstr "Japanese"
