--- a/Cours_5B7_TP1/src/Locale/fr_CA/default.po
+++ b/Cours_5B7_TP1/src/Locale/fr_CA/default.po
@@ -12,3 +12,12 @@ msgstr "Mes Paiements"
 
 msgid "msgAcheter"
 msgstr "Acheter"
+
+msgid "traductionAnglais"
+msgstr "Anglais"
+
+msgid "traductionFrancais"
+msgstr "Fran\u00E7ais"
+
+msgid "traductionJaponais"
+msgstr "Japonais"
