--- a/Cours_5B7_TP1/src/Locale/en_US/default.po
+++ b/Cours_5B7_TP1/src/Locale/en_US/default.po
@@ -1,3 +1,6 @@
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+
 msgid "msg"
 msgstr "CakePHP Internationalization example."
 
