--- a/Cours_5B7_TP1/src/Locale/fr_CA/default.po
+++ b/Cours_5B7_TP1/src/Locale/fr_CA/default.po
@@ -20,7 +20,7 @@ msgid "traductionAnglais"
 msgstr "Anglais"
 
 msgid "traductionFrancais"
-msgstr "Fran\u00E7ais"
+msgstr "Français"
 
 msgid "traductionJaponais"
 msgstr "Japonais"
