Traduction + Creation compte
-Ajout de la fonctionnalité de création de compte
-Ajout de la traduction pour le bouton creer un compte

--- a/Cours_5B7_TP1/src/Locale/en_US/default.po
+++ b/Cours_5B7_TP1/src/Locale/en_US/default.po
@@ -40,5 +40,8 @@ msgstr "Welcome"
 msgid "msglogin"
 msgstr "login"
 
+msgid "msgCreerCompte"
+msgstr "Sign up"
+
 msgid "msglogout"
 msgstr "logout"
