--- a/Cours_5B7_TP1/src/Locale/fr_CA/default.po
+++ b/Cours_5B7_TP1/src/Locale/fr_CA/default.po
@@ -40,5 +40,8 @@ msgstr "Bienvenue"
 msgid "msglogin"
 msgstr "Se connecter"
 
+msgid "msgCreerCompte"
+msgstr "Creer un compte"
+
 msgid "msglogout"
 msgstr "Se deconnecter"
